<resources>
    <string name="app_name">ChatApp</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_password_2">Re-enter Password</string>
    <string name="register_button">Not a member? Get registered now! </string>
    <string name="login_button">Login</string>
    <string name="btn_forgot_password">Forgot your Password?</string>
    <string name="lbl_forgot_password">Forgot Password?</string>
    <string name="forgot_password_msg">We need your Email address to send password reset Email.</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="signup_button">Register</string>


    <string name="user_successfully_added">User successfully added!</string>
    <string name="user_unable_to_add">Unable to add user!</string>
    <string name="adding_user_to_db">Adding user to database.</string>
    <string name="loading">Loading</string>
    <string name="please_wait">Please wait...</string>

    <string name="type_a_message">Type a message...</string>
    <string name="logout">Logout</string>
    <string name="are_you_sure">Are you sure ?</string>
    <string name="cancel">Cancel</string>

    <!--Gehad-->
    <string name="register_label"> REGISTER </string>
    <string name="email_label"> Email </string>
    <string name="password_label"> Password </string>
    <string name="repeat_password_label"> Repeat Password </string>
    <string name="enter_button"> Enter </string>
    <string name="profile_username">Username </string>
    <string name="profile_email">email </string>
    <string name="profile_email">email </string>




    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
